<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="2dp"
    android:paddingRight="1dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/texturadefondo"
    tools:context="com.faberospina.tortasdelgordo.RegistroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresoUser"

        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/toper"
        android:textColor="@color/colorPrimaryDark"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:id="@+id/eUser"
        android:singleLine="true"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPass"
        android:textColor="@color/colorPrimaryDark"

        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/bot"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ePass"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/pass"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/repeatPass"
        android:inputType="textPassword"
        android:id="@+id/ePass2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IngresoCorreo"
        android:textSize="30sp"

        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:singleLine="true"
        android:id="@+id/eEmail"
        android:textColor="@color/blue"
        android:inputType="textEmailAddress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:onClick="BtnAceptar"
            android:textSize="30sp"
            android:background="@color/silver"
            android:textColor="@color/royalblue"
            android:id="@+id/bSend"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">

        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/cancel"
            android:textSize="30sp"
            android:onClick="BtnCancel"
            android:gravity="center"
            android:background="@color/silver"
            android:textColor="@color/red"/>

    </LinearLayout>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/user"
        android:background="@color/navy"
        />

</LinearLayout>
