<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/texturadefondo"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/royalblue"
        android:textSize="19sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:textSize="30sp"
        android:gravity="center"
        android:singleLine="true"
        android:background="@color/moccasin"
        android:textColor="@color/black"
        android:id="@+id/eNombre"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@color/moccasin"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:singleLine="true"
        android:id="@+id/ePassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingreso"
        android:textSize="30sp"
        android:background="@color/silver"
        android:onClick="BtnIngresarOnClick"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="6dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_string_here"
        android:background="@drawable/selector_1"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:onClick="BtnOnClick"

        />

</LinearLayout>

