<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.faberospina.tortasdelgordo.PerfilFragment"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige"
        android:text="@string/miperfil"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/darkturquoise"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:text="@string/usuario"
        android:background="@color/beige"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tUser"
        android:hint="@string/usuario"
        android:textSize="30sp"
        android:textColor="@color/blue"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:text="@string/pass"
        android:background="@color/beige"
        android:textSize="30sp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tPass"
        android:hint="@string/pass"
        android:textSize="30sp"
        android:textColor="@color/blue"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/mail"
        android:background="@color/beige"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tEmail"
        android:hint="@string/mail"
        android:textSize="30sp"
        android:textColor="@color/blue"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/user"
        android:background="@color/navy"
        />


</LinearLayout>

</FrameLayout>
