<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.faberospina.tortasdelgordo.TradicionalFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalScrollbarPosition="right">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Bizcocho Tradicional"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/lightcoral"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/bizcocho_tradicional"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bizco"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/lightcoral"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:src="@drawable/lineah_sinfondo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chocolate"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/lightcoral"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/big_chocolate"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chocolate"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/lightcoral"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:src="@drawable/lineah_sinfondo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Maria Luisa de Arequipe"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/lightcoral"/>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/maria_luisa_arequipe"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maria"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/lightcoral"/>














            </LinearLayout>




        </ScrollView>






    </LinearLayout>




</FrameLayout>
