<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.faberospina.tortasdelgordo.RefrigeradasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalScrollbarPosition="right">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chocolate"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/lightcoral"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/phocachocolate"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cholom"
                    android:textColor="@color/lightcoral"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:src="@drawable/lineah_sinfondo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Choco fresa"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/lightcoral"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/chocofresa"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightcoral"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/tolu"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:src="@drawable/lineah_sinfondo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Choco Arequipe"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/lightcoral"/>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/choco_arequipe"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arequipe"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/lightcoral"/>




            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->


</FrameLayout>
